--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -1,7 +1,7 @@
 ---
 title: "BUSS254(03 and 05) Investments"
 author: "Prof. Ji-Woong Chung"
-format: html
+format: typst
 number-sections: true
 ---
 
